# openrouter-model-list

./: CHANGELOG.md  LICENSE  README.md  anthropic-models.json  models-mengram.json  models-openwiki.json  models-yt-summarizer.json  models.json  pyproject.toml  thresholds-openwiki.yaml  thresholds-yt-summarizer.yaml  thresholds.yaml
.github/: FUNDING.yml
.github/workflows/: update-anthropic-models.yml  update-models.yml
history/: anthropic-models.jsonl  google__gemma-4-26b-a4b-it__free.jsonl  google__gemma-4-31b-it__free.jsonl  meta-llama__llama-3.3-70b-instruct__free.jsonl  nousresearch__hermes-3-llama-3.1-405b__free.jsonl  nvidia__nemotron-3-nano-30b-a3b__free.jsonl  nvidia__nemotron-3-nano-omni-30b-a3b-reasoning__free.jsonl  nvidia__nemotron-3-super-120b-a12b__free.jsonl  nvidia__nemotron-3-ultra-550b-a55b__free.jsonl  openai__gpt-oss-120b__free.jsonl  openai__gpt-oss-20b__free.jsonl  openrouter__owl-alpha.jsonl  qwen__qwen3-next-80b-a3b-instruct__free.jsonl
scripts/: endpoint_stats.py  filters.py  generate_models.py  openrouter_client.py  probe.py  scoring.py  thresholds.py
tests/: conftest.py  test_endpoint_stats.py  test_filters.py  test_generate_models.py  test_openrouter_client.py  test_probe.py  test_scoring.py  test_thresholds.py
