[project]
name = "mengram-model-list"
version = "0.1.0"
description = "Curated, weighted list of free OpenRouter models suitable for mengram extraction"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "openai>=1.50",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "scripts"]
